# SignFinder

./: .cproject  .gitignore  .project  AndroidManifest.xml  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  NOTICE  README.md
assets/: exit_sign_config.yaml  restroom_sign_cascade.xml  restroom_sign_config.yaml  restroom_sign_men_cascade.xml  restroom_sign_men_config.yaml
cmake_modules/: FindLibSVM.cmake
doc/: Sign Finder Console Application Build Instructions.docx  Sign Finder Detection - Code Overview - b499352.docx  Sign Finder Detection - Code Overview.docx
doc/doxygen/: _detection_params_8h_source.html  _obj_detector_8h_source.html  annotated.html  class_detection_params-members.html  class_detection_params.html  class_obj_detector-members.html  class_obj_detector.html  classes.html  dir_00dd6558e9b5a6580a1c1e5f11263fdd.html  dir_32c729f91a7b5d276aa4fd2afef52627.html  dir_387103c43c402ecbb5b5cb41eabbf1df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_693496ac81c92a3a96c1ddbc84c3d8b8.html  dir_812061f898aa4b34cfb86213e5468db0.html  dir_9aa70ba451d5ce330337a038b88e3b68.html  dir_a6a17a39238517f7d16a8aa3d6a6887c.html  dir_c8f6d5277599dfbc4dc21f0d20b447e3.html  dir_cbfe12cb86c9ac27e0d94012cbb55a3b.html  dir_e45547bf53c05e6846ce034420e780eb.html  dir_fceda7ca00402b6320da2d294947861d.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  md__r_e_a_d_m_e.html  pages.html
doc/doxygen/dov/search/: all_0.js  all_4.js  all_5.js  all_6.js  all_7.js  all_b.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_5.js  variables_1.js  variables_3.js  variables_5.js  variables_6.js
doc/doxygen/search/: all_1.js  functions_3.js  functions_4.js  searchdata.js  variables_2.js
include/: DetectionParams.h  ObjDetector.h  version.h.in
jni/: Android.mk  Application.mk  DetectionParams.h  ObjDetector.cpp  ObjDetector.h  svm.cpp  wicabLibJni.cpp  wicab_utils.h
res/: cascade.xml  exit_sign_cascade.xml  exit_sign_config.yaml  restroom_binary_model.svm  restroom_sign_cascade.xml  restroom_sign_config.yaml  restroom_sign_men_config.yaml  webcam_exit_sign_config.yaml  webcam_restroom_sign_men_config.yaml
res/exit_sign/: config.yaml
res/layout/: activity_main.xml
res/menu/: main.xml
res/restroom_sign_men/: cascade.xml
res/values/: strings.xml
src/: DetectionParams.cpp  MedianFlowTracker.cpp  MedianFlowTracker.hpp  ObjDetector.cpp  main.cpp
src/org/ski/wicablib/: Detector.java  WicabCamAct.java
src/org/ski/wicablocal/: WicabCamAct.java
